--- a/index.html
+++ b/index.html
@@ -113,44 +113,52 @@
                         <h2 class="team-title">Our Team</h2>
                         <ul class="team-lists">
                             <li class="team-item">
-                                <img
-                                    src="./images/Team/img-1.jpg"
-                                    alt="Mark Guerrero"
-                                    width="264"
-                                    height="260"
-                                />
-                                <h3 class="team-name">Mark Guerrero</h3>
-                                <p class="team-text">Product Designer</p>
+                                <div class="team-person">
+                                    <img
+                                        src="./images/Team/img-1.jpg"
+                                        alt="Mark Guerrero"
+                                        width="264"
+                                        height="260"
+                                    />
+                                    <h3 class="team-name">Mark Guerrero</h3>
+                                    <p class="team-text">Product Designer</p>
+                                </div>
                             </li>
                             <li class="team-item">
-                                <img
-                                    src="./images/Team/img-2.jpg"
-                                    alt="Tom Ford"
-                                    width="264"
-                                    height="260"
-                                />
-                                <h3 class="team-name">Tom Ford</h3>
-                                <p class="team-text">Frontend Developer</p>
+                                <div class="team-person">
+                                    <img
+                                        src="./images/Team/img-2.jpg"
+                                        alt="Tom Ford"
+                                        width="264"
+                                        height="260"
+                                    />
+                                    <h3 class="team-name">Tom Ford</h3>
+                                    <p class="team-text">Frontend Developer</p>
+                                </div>
                             </li>
                             <li class="team-item">
-                                <img
-                                    src="./images/Team/img-3.jpg"
-                                    alt="Camila Garcia"
-                                    width="264"
-                                    height="260"
-                                />
-                                <h3 class="team-name">Camila Garcia</h3>
-                                <p class="team-text">Marketing</p>
+                                <div class="team-person">
+                                    <img
+                                        src="./images/Team/img-3.jpg"
+                                        alt="Camila Garcia"
+                                        width="264"
+                                        height="260"
+                                    />
+                                    <h3 class="team-name">Camila Garcia</h3>
+                                    <p class="team-text">Marketing</p>
+                                </div>
                             </li>
                             <li class="team-item">
-                                <img
-                                    src="./images/Team/img-4.jpg"
-                                    alt="Daniel Wilson"
-                                    width="264"
-                                    height="260"
-                                />
-                                <h3 class="team-name">Daniel Wilson</h3>
-                                <p class="team-text">UI Designer</p>
+                                <div class="team-person">
+                                    <img
+                                        src="./images/Team/img-4.jpg"
+                                        alt="Daniel Wilson"
+                                        width="264"
+                                        height="260"
+                                    />
+                                    <h3 class="team-name">Daniel Wilson</h3>
+                                    <p class="team-text">UI Designer</p>
+                                </div>
                             </li>
                         </ul>
                     </div>
@@ -167,8 +175,10 @@
                                     alt="Banking App"
                                     width="360"
                                 />
-                                <h3 class="item-title">Banking App</h3>
-                                <p class="portfolio-text">App</p>
+                                <div class="app-container">
+                                    <h3 class="item-title">Banking App</h3>
+                                    <p class="portfolio-text">App</p>
+                                </div>
                             </li>
                             <li class="portfolio-item">
                                 <img
@@ -176,8 +186,10 @@
                                     alt="Cashless Payment"
                                     width="360"
                                 />
-                                <h3 class="item-title">Cashless Payment</h3>
-                                <p class="portfolio-text">Marketing</p>
+                                <div class="app-container">
+                                    <h3 class="item-title">Cashless Payment</h3>
+                                    <p class="portfolio-text">Marketing</p>
+                                </div>
                             </li>
                             <li class="portfolio-item">
                                 <img
@@ -185,8 +197,10 @@
                                     alt="Meditation App"
                                     width="360"
                                 />
-                                <h3 class="item-title">Meditation App</h3>
-                                <p class="portfolio-text">App</p>
+                                <div class="app-container">
+                                    <h3 class="item-title">Meditation App</h3>
+                                    <p class="portfolio-text">App</p>
+                                </div>
                             </li>
                             <li class="portfolio-item">
                                 <img
@@ -194,8 +208,10 @@
                                     alt="Taxi Service"
                                     width="360"
                                 />
-                                <h3 class="item-title">Taxi Service</h3>
-                                <p class="portfolio-text">Marketing</p>
+                                <div class="app-container">
+                                    <h3 class="item-title">Taxi Service</h3>
+                                    <p class="portfolio-text">Marketing</p>
+                                </div>
                             </li>
                             <li class="portfolio-item">
                                 <img
@@ -203,8 +219,10 @@
                                     alt="Screen Illustrations"
                                     width="360"
                                 />
-                                <h3 class="item-title">Screen Illustrations</h3>
-                                <p class="portfolio-text">Design</p>
+                                <div class="app-container">
+                                    <h3 class="item-title">Screen Illustrations</h3>
+                                    <p class="portfolio-text">Design</p>
+                                </div>
                             </li>
                             <li class="portfolio-item">
                                 <img
@@ -212,8 +230,10 @@
                                     alt="Online Courses"
                                     width="360"
                                 />
-                                <h3 class="item-title">Online Courses</h3>
-                                <p class="portfolio-text">Marketing</p>
+                                <div class="app-container">
+                                    <h3 class="item-title">Online Courses</h3>
+                                    <p class="portfolio-text">Marketing</p>
+                                </div>
                             </li>
                         </ul>
                     </div>
